templates and user views fixed

--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -42,10 +42,10 @@
     </div>
     <div class="form-group">
         <div class="col-sm-6">
-            <a href="/reset" class="noscript">Forgot your password?</a>
+            <a href="{{url_for('users.reset')}}" class="noscript">Forgot your password?</a>
         </div>
         <div class="col-sm-6 text-right">
-            <a href="/signup">Create a new account?</a>
+            <a href="{{url_for('users.signup')}}">Create a new account?</a>
         </div>
     </div>
     <p>
